<resources>
    <string name="app_name">YDIG</string>
    <string name="facebook_app_id">2087553577958793</string>
    <string name="fb_login_protocol_scheme">fb2087553577958793</string>
    <string name="googlelogin">Masuk dengan Google</string>
    <string name="keluar">Keluar</string>
    <string name="email_anda">Email Anda</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="daftarkan">Daftarkan Saya di YDIG</string>
    <string name="policy">kami menjamin semua detail yang Anda kirimkan akan dirahasiakan dan tidak akan dibagikan dengan pihak lain untuk tujuan apa pun</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="gunakan_akun_google">Gunakan akun Google</string>
    <string name="gunakan_akun_facebook">Gunakan akun Facebook</string>
    <string name="gabung">Bergabung dengan Dialog Islam Garuda</string>
    <string name="memulai">Memulai</string>
    <string name="masuk">Masuk</string>
    <string name="home">Home</string>
    <string name="info_kajian">Info Kajian</string>
    <string name="radio_streaming">Radio Streaming</string>
    <string name="chatting">Chatting</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="profile">Profile</string>
    <string name="surampak_sakosoy">Surampak Sakosoy</string>
    <string name="www_surampaksakosoy_com">www.surampaksakosoy.com</string>
    <string name="navigation">Open Navigation Drawer</string>
    <string name="tanya_jawab">Tanya Jawab</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="judul">Judul</string>
    <string name="tulisan_arab">Tulisan Arab</string>
    <string name="arti_tulisan_arab">Arti Tulisan Arab</string>
    <string name="kontent">Kontent</string>
    <string name="belum_ada_data">Tidak ada Data</string>
    <string name="upload_date">upload date</string>
    <string name="arab_here">Arab here</string>
    <string name="arti_here">arti here</string>
    <string name="konten_here">Konten here</string>
    <string name="panduan">panduan</string>
    <string name="panduan_sholat">Panduan Sholat</string>
    <string name="description_panduan">Sungguh, shalat itu adalah kewajiban yang ditentukan waktunya atas orang-orang yang beriman. \nQ.S. An-Nisa/4: 103</string>
    <string name="gagal_memuat_gambar">Gagal memuat Gambar</string>
    <string name="panduan_greeting">Menuntut ilmu itu wajib atas setiap Muslim\n(HR. Ibnu Majah no. 224)</string>
    <string name="progress">progress</string>
    <string name="mainkan">Mainkan</string>
    <string name="ket_streaming_failed">Live Streaming Radio tidak bisa dimainkan karena server streaming tidak ditemukan, jika ini adalah kesalahan silahkan hubungi Team IT YDIG.</string>
    <string name="mohonmaaf">Mohon Maaf</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="kembali">Kembali</string>
    <string name="ketikan_pertanyaan">Tanya / Komentar</string>
    <string name="belumkomen">Jadilah yang pertama bertanya \natau berkomentar </string>
</resources>
