<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_panduan"
            android:icon="@drawable/ic_insert"
            android:title="@string/panduan" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_new_release"
            android:title="@string/info_kajian" />
        <item
            android:id="@+id/nav_streaming"
            android:icon="@drawable/ic_radio"
            android:title="@string/radio_streaming" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/konsultasi" />
    </group>
    <item android:title="@string/pengaturan">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/keluar" />
        </menu>
    </item>
</menu>