<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_streaming"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/streaming_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/serverdown"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@null"
            android:src="@drawable/serverdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/mohonmaaf"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:text="@string/ket_streaming_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/streaming_cobalagi"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/merahmarun"
            android:background="@drawable/button"
            android:text="@string/coba_lagi"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:drawableStart="@drawable/ic_radio"
            android:drawableLeft="@drawable/ic_radio"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" />

        <Button
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button"
            android:id="@+id/streaming_mainkan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:drawableStart="@drawable/ic_home"
            android:drawableLeft="@drawable/ic_home"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" />
    </LinearLayout>

</RelativeLayout>