<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:background="?android:selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtjudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="0.5"/>
            <TextView
                android:id="@+id/txtuploaddate"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_date"
                android:layout_weight="1.5"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeText"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_arab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arab_here"/>
            <TextView
                android:id="@+id/text_arti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arti_here"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/typeImage"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:src="@drawable/avatar"
                android:contentDescription="@null"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/typeAudio"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/audio_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_play"
                    tools:targetApi="lollipop" />
                <SeekBar
                    android:id="@+id/audio_seekbar"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/typeVideo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/kontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/konten_here"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginTop="4dp"
                android:id="@+id/home_button"
                android:drawableLeft="@drawable/ic_thumb_up_black_24dp"
                android:background="@android:color/transparent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:drawableStart="@drawable/ic_thumb_up_black_24dp"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:id="@+id/home_share"
                android:drawableLeft="@drawable/ic_share"
                android:background="@android:color/transparent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:drawableStart="@drawable/ic_share"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>